--- a/src/Arkivverket.Arkade.CLI/OutputStrings.resx
+++ b/src/Arkivverket.Arkade.CLI/OutputStrings.resx
@@ -118,9 +118,9 @@
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
   <data name="Noark5TestSelectionFileDescription" xml:space="preserve">
-    <value>Enter the test ID (N5.XX) at the beginning of a separate line for each test to be performed
+    <value>Enter the test ID (N5.XX) at the beginning og a separate line for each test to be performed
 {0} Tests can be omitted by putting the {0} character first on the line</value>
-    <comment>{0} = Comment symbol</comment>
+    <comment>{0} = comment symbol</comment>
   </data>
   <data name="Noark5TestSelectionFileHeading" xml:space="preserve">
     <value>NOARK5 TESTS TO BE PERFORMED BY ARKADE</value>
