--- a/src/Arkivverket.Arkade.GUI/Resources/TestRunnerGUI.nb-NO.resx
+++ b/src/Arkivverket.Arkade.GUI/Resources/TestRunnerGUI.nb-NO.resx
@@ -1,4 +1,4 @@
-﻿<?xml version="1.0" encoding="utf-8"?>
+<?xml version="1.0" encoding="utf-8"?>
 <root>
   <!-- 
     Microsoft ResX Schema 
@@ -120,7 +120,7 @@
   <data name="ArchiveNotTestable" xml:space="preserve">
     <value>Arkivuttrekket kan ikke testes: Det ble ikke funnet en gyldig spesifikasjonsfil for uttrekket.
 (Se logg for detaljer {0}).
-Du kan fortsatt lage en pakke av uttrekket.</value>
+Det kan fortsatt lages en pakke av uttrekket.</value>
   </data>
   <data name="ArchiveTestability" xml:space="preserve">
     <value>Testbarhet</value>
