Add norwegian translations

--- a/src/Arkivverket.Arkade.Core/Resources/Report.nb-NO.resx
+++ b/src/Arkivverket.Arkade.Core/Resources/Report.nb-NO.resx
@@ -198,4 +198,7 @@
   <data name="HeadingDeviations" xml:space="preserve">
     <value>Avvik</value>
   </data>
+  <data name="DateFormat" xml:space="preserve">
+    <value>dd. MMMM yyyy</value>
+  </data>
 </root>
